Cleanup: ensure that the inline-blocks are set to top alignment

--- a/sites/all/modules/node_accessibility_statistics/includes/node_accessibility_statistics.css
+++ b/sites/all/modules/node_accessibility_statistics/includes/node_accessibility_statistics.css
@@ -1,5 +1,6 @@
 .node_accessibility_statistics-plot-wrapper {
   display: inline-block;
+  vertical-align: top;
 
   margin: 6px;
 }
